--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  
+  # Firebase dependencies (commented out for now - will be enabled later)
+  # firebase_core: ^3.6.0
+  # firebase_auth: ^5.3.3
+  # cloud_firestore: ^5.5.0
+  # firebase_storage: ^12.3.3
+  # firebase_messaging: ^15.1.3
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +70,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/translations/
+    - assets/images/
     - assets/icons/
+    - assets/fonts/
+    - assets/translations/
+    - assets/images/google_logo.png
+    - assets/images/facebook_logo.png
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
