feat: implement location services and fix navigation issues
- Add location services with GPS integration and permission handling
- Add location-based job search with distance calculation
- Add location permission request screen
- Fix back navigation on job provider applications page
- Add job seeker profile viewing from applications
- Simplify analytics system and remove complex dashboard
- Add splash screen with animated logo
- Set Kiswahili as default language
- Add app logo to auth pages
- Update Android minSdk to 21 for location services
- Add location permissions for Android and iOS

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	
+	<!-- Location Permissions -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Kazi Huru needs access to your location to find nearby jobs and provide better service.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Kazi Huru needs access to your location to find nearby jobs and provide better service.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Kazi Huru needs access to your location to find nearby jobs and provide better service.</string>
 </dict>
 </plist>
