--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,18 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
-  
+
   # Location Services
   geolocator: ^11.0.0
   geocoding: ^3.0.0
   google_maps_flutter: ^2.6.0
   permission_handler: ^11.3.1
+  
+  # Image Picker for ID Verification
+  image_picker: ^1.0.7
+  
+  # URL Launcher for Maps Navigation
+  url_launcher: ^6.2.5
 
   # Firebase dependencies (commented out for now - will be enabled later)
   # firebase_core: ^3.6.0
