--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   # URL Launcher for Maps Navigation
   url_launcher: ^6.2.5
 
+  # Local Notifications
+  flutter_local_notifications: ^17.2.2
+
   # Firebase dependencies (commented out for now - will be enabled later)
   # firebase_core: ^3.6.0
   # firebase_auth: ^5.3.3
