--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,14 +33,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
 
   # Location Services
-  geolocator: ^11.0.0
+  geolocator: ^12.0.0
   geocoding: ^3.0.0
   google_maps_flutter: ^2.6.0
   permission_handler: ^11.3.1
@@ -54,12 +54,17 @@ dependencies:
   # Local Notifications
   flutter_local_notifications: ^17.2.2
 
-  # Firebase dependencies (commented out for now - will be enabled later)
-  # firebase_core: ^3.6.0
-  # firebase_auth: ^5.3.3
-  # cloud_firestore: ^5.5.0
-  # firebase_storage: ^12.3.3
-  # firebase_messaging: ^15.1.3
+  # Firebase dependencies
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.0
+  firebase_storage: ^12.3.3
+  firebase_messaging: ^15.1.3
+  http: ^1.2.0
+  flutter_dotenv: ^5.1.0
+
+  # State management
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -86,12 +91,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
-    - assets/fonts/
     - assets/translations/
-    - assets/images/google_logo.png
-    - assets/images/facebook_logo.png
-    - assets/images/logo.png
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
